			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04h: *********************************

BUG: (3/19/06, DN) System.out.println() may be blocked for 200ms .
FIX: In MessagesWindow remove sleep(200) out of synchronized block.

BUG: (3/19/06, DN) Some export names are not repaired.
FIX: In Cell.checkAndRepair iterate over copy of exports array.

IMP: (3/18/06, GVG) Select Object dialog was useless if you navigate down/up the hierarchy (Bug #862)
 
BUG: (3/18/06, GVG) "Project file not fund" message in Project Management (Bug #849).
FIX: RetrieveLibraryFromRepositoryJob implements terminateOK() instead of terminateIt.

BUG: (3/17/06, GVG) Arc routing complaing about "domain violation while figuring angle in radians" (Bug #888).
It happens when you are rounting two nodes in top of each other (tail and head points are identical).
FIX: Detecting the case.

IMP: (3/17/06, GVG) Adding tests plugin including TestMenu. Using reflection to avoid dependency on new plugin
LayerCoverageTool tests are there for now. DRC and ERC should come next.

BUG: (3/16/06, GVG) Coverage Implant not serializable.
FIX: Fixed by change LayerCoverageTool job

BUG: (3/16/06, RK) Fix bug in NCC regression script

BUG: (3/16/06, GVG) Cannot serialize HighlightEOBJ in ChangeArcProperties job (Bug #885)
FIX: Replace HighlightEOBJ dependency by using a list of ElectricObject.

BUG: (3/15/06, GVG) Cannot serialize on rename (Bug #883)
FIX: renameCellInJob doesn't require serialization of Cell.CellGroup class

************************* Version 8.04g: *********************************

NOTE: Regressios for v8.04g release were tagged as version8-04gAgain

BUG: (3/15/06, GVG) FindAndReplace dialog: find doesn't highlight some nodes (Bug #882)
FIX: detecting null key.

BUG: (3/15/06, GVG) Wrong focus after putting a cell instance down (Bug #877)